--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.3"
